[gd_scene format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Node2D" unique_id=535886802]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="." unique_id=363746796]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.1, 0.2, 1)

[node name="GameArea" type="Node2D" parent="." unique_id=2113108269]

[node name="DancerPath" type="Path2D" parent="GameArea" unique_id=1598773465]

[node name="DancersContainer" type="Node2D" parent="GameArea" unique_id=40494110]

[node name="FirePit" type="Node2D" parent="GameArea" unique_id=525953736]

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1970696915]

[node name="HUD" type="Control" parent="CanvasLayer" unique_id=1457312508]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="CanvasLayer/HUD" unique_id=387256289]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/separation = 40

[node name="LevelLabel" type="Label" parent="CanvasLayer/HUD/TopBar" unique_id=1666253150]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Level 1"

[node name="TimerBar" type="ProgressBar" parent="CanvasLayer/HUD/TopBar" unique_id=1574163337]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="ScoreLabel" type="Label" parent="CanvasLayer/HUD/TopBar" unique_id=1484125045]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"

[node name="RuleCard" type="PanelContainer" parent="CanvasLayer/HUD" unique_id=1583169469]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HUD/RuleCard" unique_id=1222852150]
layout_mode = 2

[node name="RuleTitle" type="Label" parent="CanvasLayer/HUD/RuleCard/VBox" unique_id=2071119890]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Current Rule:"

[node name="RuleText" type="Label" parent="CanvasLayer/HUD/RuleCard/VBox" unique_id=2042169031]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Devils wear RED masks"
autowrap_mode = 2

[node name="DevilsCounter" type="Label" parent="CanvasLayer/HUD" unique_id=1529858331]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 80.0
offset_bottom = 120.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Devils: 0/0"
horizontal_alignment = 2

[node name="PauseOverlay" type="ColorRect" parent="CanvasLayer" unique_id=1909847211]
visible = false
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="PauseMenu" type="CenterContainer" parent="CanvasLayer/PauseOverlay" unique_id=158067734]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/PauseOverlay/PauseMenu" unique_id=697008545]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PausedLabel" type="Label" parent="CanvasLayer/PauseOverlay/PauseMenu/VBox" unique_id=1784176843]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseOverlay/PauseMenu/VBox" unique_id=754771846]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="QuitButton" type="Button" parent="CanvasLayer/PauseOverlay/PauseMenu/VBox" unique_id=1608908097]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit to Menu"

[node name="QuitGameButton" type="Button" parent="CanvasLayer/PauseOverlay/PauseMenu/VBox" unique_id=488462895]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit Game"
